--- a/index.html
+++ b/index.html
@@ -10,6 +10,30 @@
 
 <body>
   <div id="app">
+    <h1>Loopings Through List</h1>
+    <hr>
+    <ul>
+      <li v-for="(games, index) in games" :key="index">
+        {{ index }}.) {{ games.game_character }} => {{ games.game_title }}
+      </li>
+    </ul>
+    <br>
+    <ul>
+      <li v-for="(ninjas, index) in ninjas" :key="index">
+        {{ index }}.) {{ ninjas.name }} => {{ ninjas.species }}
+      </li>
+    </ul>
+    <br>
+    <template v-for="(ninjas, index) in ninjas">
+      <h3> {{ index }} . {{ ninjas.name }} </h3>
+      <p> {{ ninjas.species }} </p>
+    </template>
+    <br>
+    <template v-for="ninja in ninjas">
+      <div v-for="(val,key) in ninja">
+        <p> {{ key }} - {{ val }} </p>
+      </div>
+    </template>
     <!-- <h1>{{ title }}</h1>
     <p>{{ message }}</p>
     Hi, my name is {{ name }} and I am {{ age }} years old.
@@ -73,13 +97,29 @@
 
     <p>Sum of A and B = {{ sum }}</p> -->
 
-    <h1>Dynamic CSS</h1>
-    <hr>
+    <!-- <h1>Dynamic CSS</h1>
+    <hr> -->
 
-    <h2>Example 1</h2>
 
-    <h2>Example 2</h2>
+    <!-- <h2>Example 1</h2> -->
+    <!-- <div v-on:click="available = !available" v-bind:class="{available: available}">
+      <span>Yakuza</span>
+    </div> -->
+    <!-- <h2>Example 2</h2>
+    <button v-on:click="nearby = !nearby">Toggle Nearby</button>
+    <button v-on:click="available = !available">Toggle Available</button>
+    <div v-bind:class="compClasses">
+      <span>Yakuza</span>
+    </div> -->
 
+    <!-- <h1>Conditionals</h1>
+    <hr> -->
+    <!-- <button v-on:click="error = !error">Toggle Error</button>
+    <button v-on:click="success = !success">Toggle Success</button> -->
+    <!-- <p v-if="error">There has been an error</p>
+    <p v-else-if="success">Code Success</p> -->
+    <!-- <p v-show="error">There has been an error</p>
+    <p v-show="success">Code Success</p> -->
 
   </div>
 
