--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div id="app">
-    <h1>Loopings Through List</h1>
+    <!-- <h1>Loopings Through List</h1>
     <hr>
     <ul>
       <li v-for="(games, index) in games" :key="index">
@@ -33,7 +33,7 @@
       <div v-for="(val,key) in ninja">
         <p> {{ key }} - {{ val }} </p>
       </div>
-    </template>
+    </template> -->
     <!-- <h1>{{ title }}</h1>
     <p>{{ message }}</p>
     Hi, my name is {{ name }} and I am {{ age }} years old.
@@ -123,8 +123,28 @@
 
   </div>
 
+  <div id="punchingBag">
+    <h1>Punching Bag</h1>
+    <hr>
+    <!-- Bag image -->
+     <div id="bag" v-bind:class="{ burst: ended }"></div>
+
+    <!-- Bag Health -->
+     <div id="bag-health">
+      <div v-bind:style="{width: health + '%'}"></div>
+     </div>
+
+    <!-- Game Controls -->
+     <div id="controls">
+      <button v-on:click="punch" v-show="!ended">Punch</button>
+      <button v-on:click="restart">Restart</button>
+     </div>
+
+  </div>
+
   <script src="https://cdn.jsdelivr.net/npm/vue@2.7.16/dist/vue.js"></script>
   <script src="./js/app.js"></script>
+  <script src="./js/punchingBag.js"></script>
 </body>
 
 </html>
